[gd_scene load_steps=4 format=3 uid="uid://b1c2cip44stsb"]

[ext_resource type="Script" path="res://scripts/challenge3.gd" id="1_fm64r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_63g50"]

[sub_resource type="Theme" id="Theme_4jeqb"]
OptionButton/icons/arrow = SubResource("AtlasTexture_63g50")

[node name="Challenge" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2, -1)
script = ExtResource("1_fm64r")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(3.00817e-06, 0.474507, 0.11392, 1)

[node name="CodeEdit" type="CodeEdit" parent="ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(577, 330)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "#include <stdio.h>
int main(void)  {
	int qtde_sementes_milho = 6
	int qtde_sementes_trigo = 7
	int tam_plantacao = 0
	while (qtde_sementes_milho > 0        
                qtde_sementes_trigo > 0
                tam_plantacao < 10)
	{ 
		plantarMilho();
    	plantarTrigo();
    	qtde_sementes_milho--;
    	qtde_sementes_trigo--;
    	tam_plantacao += 2;
	} 
}"
editable = false
gutters_draw_line_numbers = true
metadata/_edit_lock_ = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 1
offset_left = 317.0
offset_top = 129.0
offset_right = 351.0
offset_bottom = 169.0
alignment = 1

[node name="WhileOption2" type="OptionButton" parent="ColorRect/CodeEdit/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_4jeqb")

[node name="WhileOption" type="OptionButton" parent="ColorRect/CodeEdit/VBoxContainer2"]
layout_mode = 2
theme = SubResource("Theme_4jeqb")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CodeEdit"]
layout_mode = 0
offset_left = 36.0
offset_top = 438.0
offset_right = 536.0
offset_bottom = 863.0
theme_override_constants/separation = 10

[node name="ColorRect" type="ColorRect" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Aviso" type="Label" parent="ColorRect/CodeEdit/VBoxContainer/ColorRect"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
offset_top = -2.0
offset_right = 500.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.972549, 0, 0, 1)
autowrap_mode = 3
metadata/_edit_lock_ = true

[node name="Btns" type="HBoxContainer" parent="ColorRect/CodeEdit/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 300
metadata/_edit_lock_ = true

[node name="RunBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Run Code"
metadata/_edit_lock_ = true

[node name="CloseBtn" type="Button" parent="ColorRect/CodeEdit/VBoxContainer/Btns"]
unique_name_in_owner = true
layout_mode = 2
text = "Close"
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ColorRect/CodeEdit/VBoxContainer"]
custom_minimum_size = Vector2(500, 324)
layout_mode = 2
text = "testeeee
x
x
x
x
x
"
autowrap_mode = 3
metadata/_edit_lock_ = true

[connection signal="item_selected" from="ColorRect/CodeEdit/VBoxContainer2/WhileOption2" to="." method="_on_while_option_item_selected"]
[connection signal="item_selected" from="ColorRect/CodeEdit/VBoxContainer2/WhileOption2" to="." method="_on_while_option_2_item_selected"]
[connection signal="item_selected" from="ColorRect/CodeEdit/VBoxContainer2/WhileOption" to="." method="_on_while_option_item_selected"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/RunBtn" to="." method="_on_run_btn_pressed"]
[connection signal="pressed" from="ColorRect/CodeEdit/VBoxContainer/Btns/CloseBtn" to="." method="_on_close_btn_pressed"]
